# simple_package

./: CMakeLists.txt  package.xml
.github/workflows/: ici.yml
include/simple_package/: foobar.hpp
src/: foobar.cpp
test/: test_foobar.cpp
